# encrypted-file-access-gui

./: README.md  index.html  package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: create.rs  main.rs  open.rs  update_password.rs
src/assets/: top-level-pages.css
src/components/: CreatePage.vue  MenuPage.vue  OpenPage.vue  UpdatePasswordPage.vue
