[package]
name = "encrypted-file-access-gui"
version = "0.1.0"
description = "a GUI of encrypted-file-access"
authors = ["ccyuen1"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ccyuen1/encrypted-file-access-gui"
homepage = "https://github.com/ccyuen1/encrypted-file-access-gui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "os-all", "dialog-open", "dialog-save"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encrypted-file-access = { git = "https://github.com/ccyuen1/encrypted-file-access.git", rev = "ae1e6aa9b9173459190bd07e147bf020fb18ff4f" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1
